--- a/work_in_progress/PPD/PPD_version_1.lyx
+++ b/work_in_progress/PPD/PPD_version_1.lyx
@@ -67,8 +67,8 @@
 \shortcut idx
 \color #008000
 \end_index
-\secnumdepth 3
-\tocdepth 3
+\secnumdepth 4
+\tocdepth 4
 \paragraph_separation indent
 \paragraph_indentation 0bp
 \quotes_language english
@@ -550,7 +550,7 @@ Project Size, Cost and Effort Estimation
 \end_layout
 
 \begin_layout Subsection
-Size estimation: Function Point
+Size estimation: Function Points
 \end_layout
 
 \begin_layout Subsubsection
@@ -605,6 +605,325 @@ Overall Estimation
 
 \begin_layout Subsection
 Cost and Effort Estimation: COCOMO II
+\end_layout
+
+\begin_layout Subsubsection
+Scale Factors
+\end_layout
+
+\begin_layout Subsubsection
+Cost Drivers
+\end_layout
+
+\begin_layout Paragraph
+Product Factors
+\end_layout
+
+\begin_layout Paragraph*
+Required Software Reliability (RELY)
+\end_layout
+
+\begin_layout Standard
+\begin_inset Tabular
+<lyxtabular version="3" rows="3" columns="7">
+<features tabularvalignment="middle">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<column alignment="center" valignment="top">
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\series bold
+Descriptors:
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\series bold
+Rating Levels
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Very Low
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Low
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Nominal
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+High
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Very High
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+Extra High
+\end_layout
+
+\end_inset
+</cell>
+</row>
+<row>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\series bold
+Effort Multipliers
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+<cell alignment="center" valignment="top" topline="true" bottomline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\begin_layout Plain Layout
+
+\end_layout
+
+\end_inset
+</cell>
+</row>
+</lyxtabular>
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+<TODO: mettere le distanze e mettere flottante>
+\end_layout
+
+\begin_layout Paragraph*
+DataBase Size (DATA)
+\end_layout
+
+\begin_layout Paragraph*
+Product Complexity (CPLX)
+\end_layout
+
+\begin_layout Paragraph*
+Developed For Reusability (RUSE)
+\end_layout
+
+\begin_layout Paragraph*
+Documentation Match to Life-CycleNeeds (DOCU)
+\end_layout
+
+\begin_layout Paragraph
+Platform Factors
+\end_layout
+
+\begin_layout Paragraph*
+Execution Time Constraint (TIME)
+\end_layout
+
+\begin_layout Paragraph*
+Main Storage Constraint (STOR)
+\end_layout
+
+\begin_layout Paragraph*
+Platform Volatility (PVOL)
+\end_layout
+
+\begin_layout Paragraph
+Personnel Factors
+\end_layout
+
+\begin_layout Paragraph*
+Analyst Capability (ACAP)
+\end_layout
+
+\begin_layout Paragraph*
+Programmer Capability (PCAP)
+\end_layout
+
+\begin_layout Paragraph*
+Personnel Continuity (PCON)
+\end_layout
+
+\begin_layout Paragraph*
+Applications Experience (APEX)
+\end_layout
+
+\begin_layout Paragraph*
+Platform Experience (PLEX)
+\end_layout
+
+\begin_layout Paragraph*
+Language and Tool Experience (LTEX)
+\end_layout
+
+\begin_layout Paragraph
+Project Factors
+\end_layout
+
+\begin_layout Paragraph*
+Use of Software Tools (TOOL)
+\end_layout
+
+\begin_layout Paragraph*
+Multisite Development (SITE)
+\end_layout
+
+\begin_layout Paragraph
+General Factors
+\end_layout
+
+\begin_layout Paragraph*
+Required Development Schedule (SCED)
 \end_layout
 
 \begin_layout Standard
@@ -747,7 +1066,7 @@ Paola Marchesini
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+1.5
 \end_layout
 
 \end_inset
@@ -756,7 +1075,7 @@ Paola Marchesini
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+1.5
 \end_layout
 
 \end_inset
@@ -765,7 +1084,7 @@ Paola Marchesini
 \begin_inset Text
 
 \begin_layout Plain Layout
-
+1.5
 \end_layout
 
 \end_inset
